--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ant-design-vue": "^4.2.5",
+    "antd": "^5.21.6",
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
+    "chartjs-adapter-date-fns": "^2.0.0",
+    "date-fns": "^2.29.3",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -34,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
